fix: flex wrapping

--- a/src/vuestic-theme/vuestic-sass/grid/_grid-global-styles.scss
+++ b/src/vuestic-theme/vuestic-sass/grid/_grid-global-styles.scss
@@ -105,6 +105,10 @@
       }
     }
   }
+
+  &-nowrap {
+    flex-wrap: nowrap;
+  }
 }
 
 .align {
